Revision history for SparrowCI

{{$NEXT}}

0.0.11 2023-02-08T13:50:00Z

    Branches support! Hurrah!
    Queues with priorities support
    Changing internal logic - 
    hub tasks and conditional tasks

0.0.10 2023-01-19T16:00:00Z

    Slightly modify reports view
    Release pipeline - Change to pakku
    Fix issue in META6.json (dependency), hythm++
 
0.0.9 2023-01-17T16:55:00Z

    Introducing hub tasks
    Various small fixes
    Documentation improvements

0.0.8 2023-01-11T15:50:00Z

    Conditional task execution
    Minor fixes in ci logic
    UI - handle direct git URLs with schema

0.0.7 2023-01-04T18:10:00Z

    Small improvements in sparoman
    Enforce tasks dump in ci builds
    Documentation improvements

0.0.6 2023-01-04T17:10:00Z

    Introducing sparman - SparrowCI manager
    Finalizing vault integration
    Various docs improvements

0.0.5 2023-01-01T13:10:00Z

    Remove duplicate entries 
    from meta file

0.0.4 2023-01-01T13:10:00Z

    And fix meta file again!

0.0.3 2023-01-01T12:55:00Z

    Fix meta file again

0.0.2 2023-01-01T12:16:00Z

    Fix meta file

0.0.1 2023-01-01T12:15:00Z

    First version for zef ecosystem
    Self-hosted deployment added
    Various usability improvements