@@ -37,5 +37,5 @@
   },
   "tags" : [ ],
   "test-depends" : [ ],
-  "version" : "0.0.11"
+  "version" : "0.0.12"
 }
