@@ -4,7 +4,7 @@ image:
 secrets:
   - FEZ_TOKEN
 tasks:
-  - 
+  -
     name: test
     default: true
     if:
@@ -25,7 +25,7 @@ tasks:
       cd source
       zef install --/test \
         https://github.com/bduggan/p6-digest-sha1-native/archive/refs/tags/0.05.tar.gz
-      zef install "Pakku:ver<ava-1>" --/test  
+      zef install "Pakku:ver<ava-1>" --/test
       pakku add noprecomp notest to home .
       #zef install --/test .
   -
@@ -39,7 +39,7 @@ tasks:
     language: Bash
     code: |
       set -e
-      zef install --/test https://github.com/tony-o/raku-fez.git
+      zef install --/test fez
 
       cat << HERE > ~/.fez-config.json
        {
@@ -51,5 +51,5 @@ tasks:
       cd source/
 
       tom --clean
-      fez -v 
+      fez -v
       fez upload --unattended
